# planer-portal

./: CONFIG_Y_PUERTOS_SSO.txt  sp_marcaje_admin_monitor.txt  sp_marcaje_monitor_dia.txt  sp_marcaje_reporte.txt  sp_marcaje_reporte_asistencia.txt  sp_vc_tracking_batch.txt
backendrust/: .gitignore  COMPARACION_API_COMPLETA.txt  COMPARACION_NESTJS_VS_RUST.txt  Cargo.toml  HANDOVER_NUEVO_CHAT_RUST.md  PARITY_REPORT_2026-03-08.md  README.md  backend_logs.txt  backend_logs_utf8.txt  bacon.toml  build.rs  build_errors.txt  build_errors_link.txt  build_errors_utf8.txt  cargo_check.txt  cargo_check_admin.txt  cargo_check_final.txt  cargo_check_result.txt  cargo_check_result_2.txt  cargo_check_result_2_utf8.txt  cargo_check_result_utf8.txt  cargo_run_err.txt  check_debug.txt  check_err.txt  check_final.txt  check_output.txt  compare_audit.js  compare_live.js  compare_results.txt  compare_results_utf8.txt  compile_err.txt  debug_bitacora.js  diag_result.txt  diag_rust.js  errors.txt  errors_rust.txt  errors_rust_2.txt  errs.txt  errs_utf8.txt  fix_lifetimes.js  (+37 more)
backendrust/docs/: 2026-03-15_AUDIT_REPORT.md  base sql.sql  migration_inventory.md  next_steps_100_real.md
backendrust/proto/: auth.proto  common.proto  marcaje.proto  planning.proto  proyectos.proto
backendrust/scripts/: generate_manifest.py
backendrust/src/: app.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  router.rs  security.rs  state.rs
backendrust/templates/: asignacion_tarea.html  migration_v12_campo_getters.sql  migration_v13_admin_sps.sql  recordatorio_atraso_critico.html  (+4 more)
(+163 files in other folders)
