[package]
name = "backendrust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.8"
# Base de datos (SQL Server)
tiberius = { version = "0.12", features = ["tds73", "chrono", "bigdecimal"] }
bb8-tiberius = "0.15"
futures-util = "0.3"
# Seguridad y JWT
jsonwebtoken = "9"
bcrypt = "0.15"
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout"] }
# gRPC (Tonic + Protobuf)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tower = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
lettre = { version = "0.11.19", features = ["tokio1-rustls-tls", "smtp-transport", "builder", "tokio1-native-tls"] }
yup-oauth2 = "12.1.2"
tera = "1.20.1"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
